# JuKKR

./: .gitignore  .gitlab-ci.yml  Amatprecalc.f90  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  bands.f90  calc_BExydiff.f90  calculate_spinmixing.F90  changelog  filter_plot_cubes.f90  ford_settings.md  generate_vis2int.f90  install.py  main.f90  mergerefined.F90  mod_bandstr.F90  mod_calconfs.F90  mod_dlke.f90  mod_eigvects.f90  mod_fermisurf.F90  mod_fermisurf_2D.F90  mod_fermisurf_3D.F90  mod_fermisurf_basic.F90  mod_ioformat.f90  mod_iohelp.F90  mod_ioinput.f90  mod_kkrmat.F90  mod_kkrmat.f90  mod_mathtools.f90  mod_mympi.F90  mod_parutils.f90  mod_read.F90  mod_scattering.F90  mod_spintools.f90  mod_symmetries.F90  (+10 more)
source/KKRhost/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  KKRcode_doxy_config  LICENSE.md  Makefile.bak  README.md  README.txt  all_close_statements.txt  all_open_statements.txt  all_read_statements.txt  all_source_files.txt  all_write_statements.txt  amemagvec.f90  bastrmat.f90  beshank.f90  brydbm.f90  brysh2.f90  brysh3.f90  bzirr3d.f90  bzkint0.f90  bzkmesh.f90  calc_rho_ll_ss.f90  calc_rho_ll_ss_lmdos.f90  calc_torq_ll_ss.f90  calccgc.f90  calcmvec.f90  calcsph.f90  calctmat.F90  calctref.f90  calrmt.f90  changes_version_long_version_ref.txt  cinthff.f90  cjlz.f90  clsgen_tb.f90  cmatstr.f90  cmomsread.f90  collect_coverage_results.sh  (+188 more)
source/KKRhost/ALL_FORT_LINKED/: amemagvec.f  brysh2.f  bzirr3d.f  bzkint0.f  bzkmesh.f  calcrotmat.f  calctmat.F  cdjlzdz.f  chebint.f  cinthff.f  cmatmul.f  cmatstr.f  convol.f  coredir.f  corehff.f  corlsd.f  cpamillsx.f  create_newmesh.f  crospr.f  csout.f  csum.f  decimaread.f  decimate.f  decipotbas.f  decipothead.f  dirbsmid.f  dirbsrze.f  dirbsstp.f  dlke0.f  drvcore.f  epathtb.f  errmsg.f  espcb.f  ewald2d.f  force.f  gamfc.f  gaunt2.f  getdmat.f  gfree.f  gfshells.f  (+68 more)
source/KKRhost/ALL_SOURCE_FILES/: DataTypes.f90  Profiling.f90  a.out  addvirtual.f90.old  addvirtual14.f90  addvirtual_151012.f90  amemagvec.f  amemagvec.f90  bastrmat.f90  beshan.f90  beshank.f90  bofm.f90  brydbm.f  brydbm.f90  brysh1.f90  brysh2.f90  brysh3.f90  btom.f90  bzirr3d.f  bzirr3d.f90  bzkint0.f  bzkint0.f90  bzkmesh.f  bzkmesh.f90  calc_rho_ll_ss.f  calc_rho_ll_ss.f90  calc_rho_ll_ss_lmdos.f  calc_rho_ll_ss_lmdos.f90  calc_torq_ll_ss.f  calc_torq_ll_ss.f90  calccgc.f90  calcgf.f90  calcmvec.f  calcmvec.f90  calcrotmat.f  calcrotmat.f90  calcsph.f  calcsph.f90  calctmat.F  calctmat.F90  (+524 more)
source/KKRhost/MANUAL/: bookps  imp.tex  input_example_ASA_imp
source/KKRhost/SRC_COM/: addvirtual_251012.f90  bzkmesh.f  calcsph.f  calctmat.F  calctmat.f  cheb.f90  chebint.f  cpamillsx.f  decitset.f  decitset.f~  epathtb.f  etotb1.f  getscratch.f  gijxcpl.f~  idreals.f  inc.p  kkrmat01.f  kloopz1.F  kloopz1.f  kloopz1.f~  main0.f  main1a.F  main1a.f  main1b.F  main1b.f  main1c.F  main1c.f  main2.f  main2.f~  main_all.F90  mixldau.f~  mod_mympi.F90  mod_types.F90  mod_types.f90  modifgijixcpl.f~  mssinit.f~  outtmathost.f  projtau.f~  readldaupot.f  rhoval.F  (+20 more)
source/KKRhost/SRC_DRV/: drvrho.f  sprkkr_rmesh.dim
source/KKRhost/SRC_REL/: changerep.f  cinthff.f  coredir.f  dirbsrze.f  rint4pts.f  scfiterang.f  sprkkr_rmesh.dim  strsmat.f  sumupint.f  ylag.f
source/KKRhost/SRC_SRA/: beshan.f  brydbm.f  brysh1.f  brysh2.f  clustcomp.f  cmomsread.f  dclock.f  dlke1.f  dsort.f  emesht.f  espcb.f  fplaner.f  gll95.f~  inc.p  invslab.f  lattice3d.f  lattice3d.f~  madelcoef.f  mtzero.f  renorm_lly.f  rhoin.f~  rhons.f  rhons.f~  rites.f  rotmat.f  shape.f  startb1.f  tbref.F  tbref.f  wfmesh.f
source/KKRhost/SRC_UTILS/: alatradius.f  complexdos.f  complexdos2.f  complexdos3.f  complexdos3.f90  complexdos_qdos.f90  magdip3D.f  rmesh.f
source/KKRhost/SRC_UTILS/create_imp_pot/: create_imp_pot.f
source/KKRhost/SRC_VIRTUAL/: addvirtual.f90~  writehoststructure.f90  writekkrflex.f
source/KKRhost/SRC_VXC/: gcor91.f  gradr.f  inc.p  sphere_gga_old.f
source/KKRhost/codecov/: index.md
source/KKRhost/develop_BdG/: analysis_wavefuctions.ipynb  plot_wavefuncs.py
source/KKRhost/develop_BdG/develop_radial_BdG/: inputs_BdG.txt  prep_writeout_tmat_inputs
source/KKRhost/develop_BdG/test_newver/: inputcard  out  out_timing.000.txt  output.0.txt  output.000.txt  potential  shapefun
source/KKRhost/develop_BdG/writeout_radial_wavefunc/: inputs_BdG.txt
source/KKRhost/old_src/: beshank.f  bofm.f  bzkmesh.f  calc_rho_ll_ss.f  calc_torq_ll_ss.f  calcrotmat.f  calctmat.F  calrmt.f  cdjlzdz.f  chebint.f  cinit.f  cintabr.f  cinthff.f  cnlz.f  convol.f  core.f  corehff.f  corel.f  cpamillsx.f  cross.f  csinwd.f  csout.f  csum.f  cylm02.f  deciopt.f  decipothead.f  densitymat.f  dinv33.f  dirac_bi.f  dirac_op.f  dirac_soc.f  dirac_soc2.f  dirbslag.f  dirbsrad.f  drvreltmat.f  dswap1.f  epathtb.f  errmsg.f  ewald2d.f  forcxc.f  (+59 more)
source/KKRhost/reference_code_JMcode_2015_03_10/: compile  compile-before-omp  keywords.txt  makefile0  makefile1a_omp  makefile1b  makefile1c_omp  makefile2  makeflags  oldinc.p  tbkkr_jij
source/KKRhost/reference_code_JMcode_2015_03_10/ALL_FORT_LINKED/: beshank.f  brydbm.f  calccgc.f  calctref.f  calrmt.f  changerep.f  cheb.f90  cintabr.f  cmomsread.f  cnlz.f  core.f  coreerr.f  corel.f  cpw91.f  csimpk.f  csinwd.f  cylm02.f  ddot1.f  deciopt.f  dinv33.f  dirac_bs.f  drvbastrans.f  drvrho.f  dsort.f  ecoub.f  erfcex.f  etotb1.f  exch91.f  findgroup.f  fplaneg.f  fplaner.f  getscratch.f  gfmask.f  gijdmat.f  gll95.f  gradr.f  hffcore.f  ikapmue.f  initabjij.f  initldau.f  (+60 more)
source/KKRhost/reference_code_JMcode_2015_03_10/SRC_COM/: addvirtual14.f90~  beshank.f  calctmat.f  calctmat.f~  cheb2oldgrid.f90  etotb1.f  (+20 more)
source/KKRhost/tests/: inc.p  inc.p_1  inc.p_16  inc.p_72  inputcard  potential  run_all.py  run_all.sh  run_multi_node.py  run_parallel.py  run_serial.py  test_verify_results.py  verify_results.py
source/KKRhost/version_long_2015-04-22/: README.txt  compi-old  ifortvars_v9.0.csh  inc.p  makefile0  makefile1a  makefile1b  makefile1c  makefileimp  makeflags
(+3447 files in other folders)
